WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100649
[BlackBerry] Fix a build error
https://bugs.webkit.org/show_bug.cgi?id=100649
Summary
[BlackBerry] Fix a build error
Robin Cao
Reported
2012-10-29 03:19:56 PDT
r127876
changed the signature of WebCore::EventHandler::hitTestResultAtPoint(), but this commit was later reverted. We need to update a call site in the BlackBerry port to make it build.
Attachments
patch
(1.79 KB, patch)
2012-10-29 04:18 PDT
,
Robin Cao
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Robin Cao
Comment 1
2012-10-29 04:18:58 PDT
Created
attachment 171199
[details]
patch
Kentaro Hara
Comment 2
2012-10-29 05:51:39 PDT
Comment on
attachment 171199
[details]
patch rs=me. This could even be an unreviewed fix.
WebKit Review Bot
Comment 3
2012-10-29 06:08:06 PDT
Comment on
attachment 171199
[details]
patch Clearing flags on attachment: 171199 Committed
r132792
: <
http://trac.webkit.org/changeset/132792
>
WebKit Review Bot
Comment 4
2012-10-29 06:08:14 PDT
All reviewed patches have been landed. Closing bug.
Antonio Gomes
Comment 5
2012-10-29 14:32:27 PDT
Comment on
attachment 171199
[details]
patch From a very quick look, this revision changed the method signature to be the contrary of what you did:
http://trac.webkit.org/changeset/127876/trunk/Source/WebCore/page/EventHandler.h
It does not take a bool as a second parameter, but a HitTestRequestType. Did I miss something?
Antonio Gomes
Comment 6
2012-10-29 14:42:50 PDT
(In reply to
comment #5
)
> (From update of
attachment 171199
[details]
) > From a very quick look, this revision changed the method signature to be the contrary of what you did:
http://trac.webkit.org/changeset/127876/trunk/Source/WebCore/page/EventHandler.h
> > > It does not take a bool as a second parameter, but a HitTestRequestType. Did I miss something?
Ignore, me. I missed " but this commit was later reverted."
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug