[BlackBerry] Fix a build error https://bugs.webkit.org/show_bug.cgi?id=100649

Patch by Robin Cao <robin.cao@torchmobile.com.cn> on 2012-10-29
Reviewed by Kentaro Hara.

r127876 changed the signature of WebCore::EventHandler::hitTestResultAtPoint()
and this commit was later reverted. We need to update a call site in the
BlackBerry port to make it build.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::hitTestResult):

Canonical link: https://commits.webkit.org/118695@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132792 268f45cc-cd09-0410-ab3c-d52691b4dbfc